# computer_vision_training

./: .gitignore  LICENSE  README.md  fix_opencv_uv.sh  flake.nix  pyproject.toml  test.py  train.py
