[project]
name = "computer-vision-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "label-studio>=1.23.0",
    "onnx>=1.21.0",
    "onnxruntime-gpu>=1.25.1",
    "onnxslim>=0.1.92",
    "ray[tune]>=2.55.0",
    "tensorrt>=10.16.1.11",
    "ultralytics>=8.4.40",
]

